--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "next": "^14.2.3",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
     "react-countdown": "^2.3.5",
@@ -18,6 +20,7 @@
     "react-modal-video": "^2.0.1",
     "react-scroll-trigger": "^0.6.14",
     "react-slider": "^2.0.6",
-    "swiper": "^11.0.7"
+    "swiper": "^11.0.7",
+    "tailwindcss": "^4.1.13"
   }
 }
