--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "react-slider": "^2.0.6",
     "swiper": "^11.0.7",
     "tailwindcss": "^4.1.13"
+  },
+  "devDependencies": {
+    "@types/node": "24.5.2",
+    "eslint-config-prettier": "^10.1.8",
+    "prettier": "^3.6.2",
+    "typescript": "5.9.2"
   }
 }
