--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-calendar": "^5.0.0",
-    "react-countdown": "^2.3.5",
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-modal-video": "^2.0.1",
     "react-scroll-trigger": "^0.6.14",
     "react-slider": "^2.0.6",
     "swiper": "^11.0.7"
+  },
+  "devDependencies": {
+    "@types/node": "25.2.2",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "16.1.6",
+    "typescript": "5.9.3"
   }
 }
