--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "swiper": "^11.0.7"
   },
   "devDependencies": {
-    "@types/node": "25.2.2",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8.57.1",
-    "eslint-config-next": "16.1.6",
-    "typescript": "5.9.3"
+    "eslint-config-next": "^14.2.3",
+    "typescript": "^5"
   }
 }
